--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,6 +31,7 @@ subjects:
 - !lcsh 'Mystery fiction'
 - !lcsh 'Air pilots -- Fiction'
 - !lcsh 'Airplanes -- Fiction'
+- GITenberg
 tableOfContents: The mystery of Rasputin's jewels -- A race for a throne -- The seven
   dots -- The sorcerer of Soho -- The master atom -- The horror of Lockie -- The peril
   of the Préfet -- The message for one eye only.
